# nmpc_pattern_generator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.in  README.md
cmake/: CMakeLists.txt.in_yaml  Findrbdl.cmake  Findrbdl_urdfreader.cmake  nmpc_pattern_generator_uninstall.cmake
libs/artificial_agent/: CMakeLists.txt
libs/artificial_agent/include/artificial_agent/: dqn.h
libs/artificial_agent/src/: dqn.cpp
libs/gazebo_plugins/: CMakeLists.txt  gazebo_heicub.sh  gazebo_heicub.world
libs/gazebo_plugins/include/gazebo_plugins/: AICubPlugin.h
libs/gazebo_plugins/src/: AICubPlugin.cpp  gazebo_heicub.sh
libs/io_module/: CMakeLists.txt  cam_left.yaml  cam_right.yaml  cam_stereo.yaml  configs.yaml
libs/io_module/include/io_module/: network_manager.h  read.h  reader.h  utils.h  write.h  writer.h
libs/io_module/src/: network_manager.cpp  reader.cpp  test_depth.cpp  test_keyboard.cpp  test_network_manager.cpp  test_reader.cpp  test_writer.cpp  writer.cpp
libs/kinematics/: CMakeLists.txt  configs.yaml  main.cpp  pattern_to_joint_angles.cpp
libs/kinematics/examples/: inverse_kinematics_example.cpp
libs/kinematics/include/kinematics/: inverse_kinematics.h  kinematics.h  utils.h
libs/kinematics/src/: inverse_kinematics.cpp  kinematics.cpp  test_inverse_kinematics.cpp
libs/learning/: CMakeLists.txt
libs/learning/examples/: test_ppo_example.cpp  train_ppo_example.cpp
libs/learning/include/learning/: models.h  proximal_policy_optimization.h  timer.h  utils.h
libs/learning/python/: attn_model.py  forward_lstm.py  maximize_input.py  model.py  plot.py  plot_vel_gt_pred.py  python_to_cpp.py  test.py  test_sequence_prediction.py  test_sequence_prediction_attn.py  train.py  train_attn.py  train_gd.py  train_rgbd.py  trained_script_module.pt  unet_model.py  utils.py  utils_attn.py
libs/learning/src/: proximal_policy_optimization.cpp
libs/pattern_generator/: CMakeLists.txt  base_generator.cpp  base_generator.h  configs.yaml  configs_behavioral_cloning.yaml  configs_hrp2.yaml  configs_meshup.yaml  configs_rl.yaml  configs_sim_no_feedback.yaml  interpolation.cpp  interpolation.h  mpc_generator.cpp  mpc_generator.h  nmpc_generator.cpp  nmpc_generator.h  utils.h
libs/pattern_generator/eval/: CMakeLists.txt  generate_steps.cpp  plot_com_feet.py
libs/pattern_generator/eval/cmake/: Findkinematics.cmake  Findpattern_generator.cmake  FindqpOASES.cmake
libs/pattern_generator/examples/: interpolation_example.cpp  mpc_generator_example.cpp  nmpc_generate_data_example.cpp  nmpc_generator_example.cpp
libs/pattern_generator/include/pattern_generator/: base_generator.h  interpolate.h  interpolation.h  mpc_generator.h  nmpc_generator.h  timer.h  utils.h
libs/pattern_generator/src/: base_generator.cpp  interpolate.cpp  interpolation.cpp  mpc_generator.cpp  nmpc_generator.cpp
libs/pattern_generator/tests/: compare_mpc_to_nmpc.cpp  test_mpc_generator.cpp  test_nmpc_generator.cpp
libs/reinforcement_learning/: CMakeLists.txt
libs/reinforcement_learning/examples/: ppo_example.cpp  test_ppo_example.cpp  train_ppo_example.cpp
libs/reinforcement_learning/include/reinforcement_learning/: models.h  proximal_policy_optimization.h  utils.h
libs/reinforcement_learning/src/: proximal_policy_optimization.cpp
local/: plot_pattern.py
models/: icub_heidelberg01_no_weights.urdf
plot/: plot_pattern.py  plot_ppo.py  plot_predicted_preview_horizon_mse.py  plot_preview_horizon.py  plot_zmp.py
sh/: run_app_user_interface.sh  run_behavioural_augmentation.sh  run_behavioural_cloning.sh  run_keyboard_user_interface.sh  run_user_controlled_walking.sh
shell/: run_app_user_interface.sh  run_keyboard_user_interface.sh  run_user_controlled_walking.sh
src/: app_user_interface.cpp  artificially_controlled_walking.cpp  behavioural_augmentation.cpp  behavioural_augmentation_real_robot.cpp  behavioural_augmentation_real_robot_external_data.cpp  behavioural_augmentation_simulation.cpp  behavioural_cloning.cpp  behavioural_cloning_external_data.cpp  generate_calib_imgs.cpp  joint_angles_for_meshup.cpp  keyboard_user_interface.cpp  learn_nmpc.cpp  learn_nmpc_fc.cpp  main.cpp  offline_walking.cpp  ppo_nmpc.cpp  ppo_nmpc_map.cpp  predict_nmpc.cpp  test_pg.cpp  test_ppo_nmpc.cpp  test_read_ft.cpp  test_robot.cpp  thesis_generate_depth_map.cpp  train_ppo_nmpc.cpp  tune_disp_map.cpp  user_controlled_walking.cpp
